<resources>
    <string name="app_name">ZeroNetwork</string>
    <string name="password">Password</string>
    <string name="pass_hint">at least 8 characters</string>
    <string name="login">login</string>
    <string name="email_hint">valuableworld@africhacks.com</string>
    <string name="email">Email Address</string>
    <string name="fullname">Full Name</string>
    <string name="fullname_hint">Valuable World</string>
    <string name="phone">+234813 317 4981</string>
    <string name="phonet">Phone Number</string>
    <string name="bvn">BVN</string>
    <string name="bvn_hinh">XXX837</string>
    <string name="create_account">Create Account</string>
</resources>