<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="85dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="32sp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="185dp">
<!--            1-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fullname"
                android:textSize="21sp"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="10dp"></TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fname"
                android:layout_width="393dp"
                android:layout_height="56dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/radius"
                android:hint="@string/fullname_hint"
                android:paddingLeft="9dp"
                android:textSize="17sp"></com.google.android.material.textfield.TextInputEditText>
<!--2-->
            <TextView
                android:layout_width="393dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="16dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="21sp"></TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="390dp"
                android:layout_height="56dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/radius"
                android:inputType="textPassword"
                android:hint="@string/email_hint"
                android:paddingLeft="9dp"
                android:textSize="17sp"
                android:layout_marginBottom="10dp"></com.google.android.material.textfield.TextInputEditText>
<!--3-->

            <!--            4-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/phonet"
                android:textSize="21sp"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="10dp"></TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="393dp"
                android:layout_height="56dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/radius"
                android:hint="@string/phone"
                android:paddingLeft="9dp"
                android:textSize="17sp"></com.google.android.material.textfield.TextInputEditText>
            <!--5-->
            <TextView
                android:layout_width="393dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="16dp"
                android:text="@string/bvn"
                android:textSize="21sp"
                android:textColor="@color/black"></TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bvn"
                android:layout_width="390dp"
                android:layout_height="56dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/radius"
                android:inputType="number"
                android:hint="@string/bvn_hinh"
                android:paddingLeft="9dp"
                android:textSize="17sp"
                android:layout_marginBottom="10dp"></com.google.android.material.textfield.TextInputEditText>
            <!--6-->
            <TextView
                android:layout_width="393dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="16dp"
                android:text="@string/password"
                android:textSize="21sp"
                android:textColor="@color/black"></TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="390dp"
                android:layout_height="56dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/radius"
                android:inputType="number"
                android:hint="@string/pass_hint"
                android:paddingLeft="9dp"
                android:textSize="17sp"
                android:layout_marginBottom="10dp"></com.google.android.material.textfield.TextInputEditText>




            <Button
                android:id="@+id/btnlogin"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/radius"
                android:text="@string/login"

                android:layout_marginTop="70dp"></Button>

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account? Login"
                android:textStyle="normal"
                android:textSize="19sp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"></TextView>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
