<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="85dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="32sp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="185dp"
            android:gravity="center">

            <TextView
                android:layout_width="269dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/email"
                android:textSize="21sp"></TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="262dp"
                android:layout_height="56dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/radius"
                android:hint="@string/email_hint"
                android:paddingLeft="9dp"
                android:textSize="17sp"
                android:inputType="textEmailAddress"></com.google.android.material.textfield.TextInputEditText>

            <TextView
                android:layout_width="263dp"
                android:layout_height="wrap_content"

                android:layout_marginBottom="16dp"
                android:text="@string/password"
                android:textSize="21sp"></TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="262dp"
                android:layout_height="56dp"
                android:background="@drawable/radius"
                android:inputType="textPassword"
                android:hint="@string/pass_hint"
                android:paddingLeft="9dp"
                android:textSize="17sp"></com.google.android.material.textfield.TextInputEditText>

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="262dp"
                android:layout_height="wrap_content"
                android:background="@drawable/radius"
                android:text="@string/login"

                android:layout_marginTop="60dp"></Button>

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account? Sign up"
                android:textStyle="normal"
                android:textSize="19sp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"></TextView>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
